# solana-bootcamp

./: .gitignore  AGENTS.md  README.md  SPEC.md
.github/workflows/: agent-docker.yml  deploy.yml
.windsurf/workflows/: mainnet-deploy.md
config/: tokens.devnet.json
docs/: AGENTS.md
docs/ideas/: bootcamp-enhancement-analysis.md  mainnet-deployment-guide.md  world-class-dapp-akash-deploy.md  world-class-dapp-cloudflare-deploy.md
docs/technical-writing/: proposal-dapp-debugging-deep-dive.md
exercises/: AGENTS.md
exercises/counter-pda/: Anchor.toml
exercises/defi-cli/: .env.example  README.md  (+3 more)
exercises/escrow-program/programs/escrow-program/: Cargo.toml
exercises/escrow-program/programs/escrow-program/src/: lib.rs  state.rs
exercises/escrow-program/programs/escrow-program/src/instructions/: cancel.rs  make.rs  mod.rs  take.rs
exercises/proposal-state-machine/programs/proposal-state-machine/: Cargo.toml
exercises/proposal-state-machine/programs/proposal-state-machine/src/: lib.rs
exercises/tip-jar-cpi/programs/tip-jar-cpi/: Cargo.toml
exercises/tip-jar-cpi/programs/tip-jar-cpi/src/: lib.rs
notes/: AGENTS.md  week-01-foundations.md  week-02-first-deployments.md  week-03-first-token.md  week-04-programs-and-frontend.md  week-05-escrow-defi-nfts.md
progress/: AGENTS.md  assignments.md  weekly-log.md
projects/: AGENTS.md
resources/: AGENTS.md  solana-skills-ecosystem-analysis.md
scripts/: restore_wallet.py
social/: AGENTS.md  published.md
tasks/: AGENTS.md  plan.md  todo.md  week-05-implementation-plan.md  week-05-stretch-goals-plan.md
(+141 files in other folders)
